[package]
name = "maelstrom-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
derive_more = { version = "1.0.0", features = ["constructor", "from"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await", "executor"] }
io-arc = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["retry", "timeout", "util"] }
uuid = { version = "1.3", features = ["v4", "serde"] }

[dev-dependencies]
assert_matches = { version = "1.5" }
test-case = { version = "3.3" }
